# reuseExplorer

./: .clang-format  .gitignore  .gitmodules  .polyscope.ini  CMakeLists.txt  Eport Yolo as Onnx.ipynb  Markov Clustering Test.ipynb  README.md  Test Notebook - Amptssygehus.ipynb  Test Notebook.ipynb  Test_MC.ipynb  VertexGroup Reader for PolyFit files.ipynb  clusters.txt  pyproject.toml  shell.nix  test.py  user_provided_planes_result.off
cmake/: Boost.cmake  CGAL.cmake  CUDA.cmake  Eigen.cmake  Embree.cmake  FindGUROBI.cmake  Gurobi.cmake  HDF5.cmake  OpenCV.cmake  PCL.cmake  Python.cmake  SCIP.cmake  TBB.cmake
python/linkml_py/: __init__.py  cli.py  default.ini  speckle.py
python/linkml_py/export/: export.py
python/linkml_py/speckle/: WORLDXY.py  __init__.py  aabb.py  brep.py  export.py  mesh.py  pointcloud.py  polyline.py
python/linkml_py/torch/: Datase.py
src/: alphashape.cpp  cellcomplex.cpp  cellcomplex.h  fitPlaneSolver.cpp  fitPlaneSolver.h  fit_planes.cpp  linkml.cpp  linkml.h  linkml.hh  linkmlpy.cpp  main.cc  opengl.cpp
src/algorithms/: all.h  all.hh  clustering.h  clustering.hh  create_cell_complex.cpp  create_cell_complex.h  create_cell_complex.hh  fit_plane.cpp  fit_plane.h  fit_plane.hh  fit_planes.cpp  fit_planes.hh  functions.h  functions.hh  markov_clustering.cpp  markov_clustering.h  markov_clustering.hh  mcl.hh  mcl_cli.cpp  mcl_cpp.cpp  mcl_gpu.cu  refine.cpp  refine.h  refine.hh  surface_reconstruction.cpp  surface_reconstruction.hh
src/functions/: all.h  all.hh  alpha_shape.h  alpha_shape.hh  alphashape.cpp  anotate.cpp  cluster_rooms.hh  clustering.cpp  color.hh  color_facetes.h  color_facetes.hh  compute_coverage.h  compute_coverage.hh  constuct_adjacency.h  constuct_adjacency.hh  convex_hull_2d.h  convex_hull_2d.hh  crop_plane_with_aabb.h  crop_plane_with_aabb.hh  decimate_cell_complex.h  decimate_cell_complex.hh  depth_to_3d.hh  downsample.cpp  downsample.hh  extract_instances.hh  filter.cpp  filter.hh  fit_plane_thorugh_points.h  fit_plane_thorugh_points.hh  get_aabb.h  get_csystem.h  get_csystem.hh  get_matrix_from_plane.hh  linear_program.cpp  linear_program.h  linear_program_io.cpp  linear_program_solver.cpp  linear_program_solver.h  linear_program_solver_GLPK.cpp  linear_program_solver_GUROBI.cpp  (+26 more)
src/types/: Brep.cpp  Brep.hh  CellComplex.cpp  CellComplex.h  CellComplex.hh  Dataset.cpp  Dataset.hh  GUROBI_mixed_integer_program_traits.hh  PlanarPointSet.hh  PointCloud.cpp  PointCloud.hh  PointClouds.hh  PointClouds_display.cpp  Polyhonal_surface_reconstruction_custom.h  Polyhonal_surface_reconstruction_custom.hh  Speckle.cpp  Speckle.hh  Surface_Mesh.cpp  Surface_Mesh.hh  Timer.hh  Yolo.cpp  Yolo.hh  accumulators.hh  all.h  all.hh  cell.cpp  cell.h  compute_conficences.hh  compute_visibility.h  compute_visibility.hh  data.hh  dataset.cpp  dataset.hh  hypothesis.h  kd_pos3.h  plane.h  plane_fit_parameters.hh  point_cloud.h  point_cloud.hh  reg.h  (+8 more)
test_data_loaders/: Amtssygehus.py  LoadPolyFitRefinedPlanes.py  Office.py  VertexGroup.py
tests/: app.cc  main.cc  markov_clustering.cc  markov_clustering_dense.cc  markov_clustering_sparce.cc
